# Generate_Menu_image_API

./: Dockerfile  main.py  pyproject.toml  requirements.txt
database/: database.py
database/models/menu_list/: menu.py
database/models/store/: store_model.py
database/repositories/: store_repository.py
database/repositories/menu_list/: menu_list_repository.py
v1/descriptions/: menu_desc.py  menu_recommend_desc.py  seasonal_story_desc.py  store_desc.py
v1/routers/health/: health_check_router.py
v1/routers/menu_board/: menu_router.py
v1/routers/menu_list/: menu_list_router.py
v1/routers/ml/common/: api_client.py  fallback.py  repository.py  req_exam.py  service.py
v1/routers/ml/common/create_menu/: create_menu_repository.py  create_menu_service.py
v1/routers/ml/default/: ml_default_router.py
v1/routers/ml/menu_recommend/: menu_recommend_router.py
v1/routers/ml/seasonal_story/: seasonal_story_router.py
v1/routers/store/: store_router.py
v1/schemas/: base_model.py  empty_base_dto.py
v1/schemas/create_menu/: create_menu.py
v1/schemas/menu_board/: menu_model.py
v1/schemas/menu_list/: menu_list_dto.py
v1/schemas/menu_recommend/: menu_recommend_dto.py
v1/schemas/seasonal_story/: seasonal_story_dto.py
v1/schemas/store/: store_dto.py
