[project]
name = "api"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "alembic>=1.17.2",
    "authlib==1.2.0",
    "fastapi>=0.121.1",
    "httpx==0.24.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-core>=2.41.5",
    "pyjwt==2.8.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
